--- a/Symmetry/Main.storyboard
+++ b/Symmetry/Main.storyboard
@@ -255,7 +255,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show Line Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ovm-NK-WYp">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show Coordinates" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ovm-NK-WYp">
                                                     <rect key="frame" x="20" y="11.333333333333336" width="313" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -500,7 +500,7 @@
                                 <rect key="frame" x="0.0" y="611" width="414" height="125"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zsK-lH-C3z" userLabel="photo/video view" customClass="PhotoOrVideoView" customModule="Symmetry" customModuleProvider="target">
-                                        <rect key="frame" x="92" y="10.333333333333371" width="230" height="30"/>
+                                        <rect key="frame" x="92" y="13" width="230" height="30"/>
                                         <subviews>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XTX-Ke-LsM">
                                                 <rect key="frame" x="0.0" y="0.0" width="230" height="30"/>
@@ -524,7 +524,7 @@
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Video" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQe-Vv-MLi">
                                                                     <rect key="frame" x="0.0" y="0.0" width="70" height="40"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="13"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -557,22 +557,22 @@
                                         </connections>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6pD-mV-9T9" customClass="SwiftyCamButton" customModule="SwiftyCam">
-                                        <rect key="frame" x="172.66666666666666" y="40.333333333333378" width="68.666666666666657" height="68.666666666666686"/>
+                                        <rect key="frame" x="178" y="43" width="58" height="58"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="68.670000000000002" id="6cj-cB-uGh"/>
+                                            <constraint firstAttribute="height" constant="58" id="6cj-cB-uGh"/>
                                             <constraint firstAttribute="width" secondItem="6pD-mV-9T9" secondAttribute="height" multiplier="1:1" id="Yc4-16-ycZ"/>
                                         </constraints>
                                         <state key="normal" image="capture btn"/>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQF-nY-0K1" userLabel="Record Button">
-                                        <rect key="frame" x="172.66666666666666" y="40.333333333333378" width="68.666666666666657" height="68.666666666666686"/>
+                                        <rect key="frame" x="178" y="43" width="58" height="58"/>
                                         <state key="normal" image="record btn"/>
                                         <connections>
                                             <action selector="recordButtonPressed:" destination="Zwc-sb-GWL" eventType="touchUpInside" id="UNd-A5-lG9"/>
                                         </connections>
                                     </button>
                                     <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zvW-Mz-0yO">
-                                        <rect key="frame" x="358" y="54.666666666666629" width="40" height="40"/>
+                                        <rect key="frame" x="358" y="52" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="2VX-Bg-ftk"/>
                                             <constraint firstAttribute="height" constant="40" id="Ev6-Ob-JEq"/>
@@ -583,14 +583,14 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gallery" translatesAutoresizingMaskIntoConstraints="NO" id="NrQ-LV-9Yi">
-                                        <rect key="frame" x="16" y="49.666666666666629" width="50" height="50"/>
+                                        <rect key="frame" x="16" y="47" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="NrQ-LV-9Yi" secondAttribute="height" multiplier="1:1" id="795-fF-ze6"/>
                                             <constraint firstAttribute="height" constant="50" id="C3o-XD-Erf"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B00-KL-29z">
-                                        <rect key="frame" x="16" y="49.666666666666629" width="50" height="50"/>
+                                        <rect key="frame" x="16" y="47" width="50" height="50"/>
                                         <connections>
                                             <action selector="openGalleryPressed:" destination="Zwc-sb-GWL" eventType="touchUpInside" id="SJj-gU-ekk"/>
                                         </connections>
@@ -599,14 +599,13 @@
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="aQF-nY-0K1" firstAttribute="height" secondItem="6pD-mV-9T9" secondAttribute="height" id="1Ju-Va-Vh9"/>
-                                    <constraint firstAttribute="bottom" secondItem="6pD-mV-9T9" secondAttribute="bottom" constant="16" id="423-XB-f5Z"/>
+                                    <constraint firstAttribute="bottom" secondItem="6pD-mV-9T9" secondAttribute="bottom" constant="24" id="423-XB-f5Z"/>
                                     <constraint firstItem="6pD-mV-9T9" firstAttribute="centerY" secondItem="NrQ-LV-9Yi" secondAttribute="centerY" id="AzW-vC-IKx"/>
                                     <constraint firstItem="6pD-mV-9T9" firstAttribute="centerX" secondItem="K4D-mL-5nI" secondAttribute="centerX" id="DRz-9P-y4c"/>
                                     <constraint firstItem="zsK-lH-C3z" firstAttribute="centerX" secondItem="K4D-mL-5nI" secondAttribute="centerX" id="EuA-LK-FgT"/>
                                     <constraint firstAttribute="trailing" secondItem="zvW-Mz-0yO" secondAttribute="trailing" constant="16" id="FiC-We-Cbj"/>
                                     <constraint firstItem="aQF-nY-0K1" firstAttribute="width" secondItem="6pD-mV-9T9" secondAttribute="width" id="Kdv-3E-a5P"/>
                                     <constraint firstItem="B00-KL-29z" firstAttribute="centerX" secondItem="NrQ-LV-9Yi" secondAttribute="centerX" id="Nsj-Q3-x58"/>
-                                    <constraint firstAttribute="bottom" secondItem="aQF-nY-0K1" secondAttribute="bottom" constant="16" id="PbA-f7-lq3"/>
                                     <constraint firstItem="B00-KL-29z" firstAttribute="width" secondItem="NrQ-LV-9Yi" secondAttribute="width" id="WAN-Ku-Eg8"/>
                                     <constraint firstItem="6pD-mV-9T9" firstAttribute="top" secondItem="zsK-lH-C3z" secondAttribute="bottom" id="ZKX-ii-KEW"/>
                                     <constraint firstItem="aQF-nY-0K1" firstAttribute="centerY" secondItem="NrQ-LV-9Yi" secondAttribute="centerY" id="eNA-Vh-G4f"/>
