--- a/Symmetry/Main.storyboard
+++ b/Symmetry/Main.storyboard
@@ -74,8 +74,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Line width" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="miW-By-RNt">
-                                                    <rect key="frame" x="20" y="11.333333333333336" width="78.666666666666671" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Line Weight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="miW-By-RNt">
+                                                    <rect key="frame" x="20" y="11.333333333333336" width="91" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -463,12 +463,27 @@
                                     <action selector="closePressed:" destination="csV-hm-icL" eventType="touchUpInside" id="A7e-6H-MTg"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ctg-wp-CkQ">
+                                <rect key="frame" x="32" y="193" width="50" height="50"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="MAV-ol-6OR"/>
+                                    <constraint firstAttribute="height" constant="50" id="gXZ-hs-FLn"/>
+                                </constraints>
+                                <state key="normal" image="checkmark"/>
+                                <connections>
+                                    <action selector="closePressed:" destination="csV-hm-icL" eventType="touchUpInside" id="tHw-XZ-eWw"/>
+                                    <action selector="donePressed:" destination="csV-hm-icL" eventType="touchUpInside" id="DJy-pO-BrD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="nz2-oB-DTX" firstAttribute="centerX" secondItem="DKG-Ix-RFG" secondAttribute="centerX" id="Azf-HG-E7V"/>
                             <constraint firstItem="k00-Nj-Lll" firstAttribute="top" secondItem="nz2-oB-DTX" secondAttribute="top" constant="-25" id="GDx-fX-L5Z"/>
+                            <constraint firstItem="ctg-wp-CkQ" firstAttribute="top" secondItem="nz2-oB-DTX" secondAttribute="top" constant="-25" id="YxZ-12-VJu"/>
                             <constraint firstItem="k00-Nj-Lll" firstAttribute="trailing" secondItem="nz2-oB-DTX" secondAttribute="trailing" constant="25" id="ect-6t-6B6"/>
+                            <constraint firstItem="ctg-wp-CkQ" firstAttribute="leading" secondItem="nz2-oB-DTX" secondAttribute="leading" constant="-25" id="g4u-51-BJc"/>
                             <constraint firstItem="nz2-oB-DTX" firstAttribute="centerY" secondItem="DKG-Ix-RFG" secondAttribute="centerY" id="sed-JC-Ovh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KAo-Nz-9DT"/>
@@ -478,6 +493,7 @@
                     <connections>
                         <outlet property="closeButton" destination="k00-Nj-Lll" id="HV1-Uz-kN6"/>
                         <outlet property="colorPickerView" destination="nz2-oB-DTX" id="zhe-i2-wRl"/>
+                        <outlet property="doneButton" destination="ctg-wp-CkQ" id="hUb-cA-i2Q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qwO-UZ-qpa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -759,6 +775,7 @@
     </scenes>
     <resources>
         <image name="capture btn" width="512" height="512"/>
+        <image name="checkmark" width="36" height="36"/>
         <image name="close" width="16" height="16"/>
         <image name="flash off" width="100" height="100"/>
         <image name="gallery" width="128" height="128"/>
