fix orientation on iPad

--- a/Symmetry/view/camera controls view/CameraControlsView.xib
+++ b/Symmetry/view/camera controls view/CameraControlsView.xib
@@ -16,18 +16,25 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
+                <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HmG-4V-bjI" userLabel="Overlay View">
+                    <rect key="frame" x="0.0" y="83.5" width="375" height="500"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="HmG-4V-bjI" secondAttribute="height" multiplier="3:4" id="fFt-Nm-9A0"/>
+                    </constraints>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b6K-rc-dQj" userLabel="header View">
-                    <rect key="frame" x="0.0" y="20" width="375" height="63.5"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="83.5"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings" translatesAutoresizingMaskIntoConstraints="NO" id="qDH-3i-nid">
-                            <rect key="frame" x="326.5" y="15.5" width="25" height="25"/>
+                            <rect key="frame" x="326.5" y="35.5" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="qDH-3i-nid" secondAttribute="height" multiplier="1:1" id="K3n-d4-JFy"/>
                                 <constraint firstAttribute="height" constant="25" id="vxd-tm-nYP"/>
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VGj-6q-vUW">
-                            <rect key="frame" x="319" y="8" width="40" height="40"/>
+                            <rect key="frame" x="319" y="28" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="VGj-6q-vUW" secondAttribute="height" multiplier="1:1" id="d10-ul-uhJ"/>
                                 <constraint firstAttribute="height" constant="40" id="vGJ-8v-ebg"/>
@@ -37,14 +44,14 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flash auto" translatesAutoresizingMaskIntoConstraints="NO" id="X68-SY-EPa">
-                            <rect key="frame" x="23.5" y="15.5" width="25" height="25"/>
+                            <rect key="frame" x="23.5" y="35.5" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="X68-SY-EPa" secondAttribute="height" multiplier="1:1" id="dWZ-3c-hhQ"/>
                                 <constraint firstAttribute="height" constant="25" id="iru-wt-B4b"/>
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5SN-V1-fwE">
-                            <rect key="frame" x="16" y="8" width="40" height="40"/>
+                            <rect key="frame" x="16" y="28" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="BeU-TM-QAe"/>
                                 <constraint firstAttribute="width" secondItem="5SN-V1-fwE" secondAttribute="height" multiplier="1:1" id="hZH-gs-L1O"/>
@@ -54,24 +61,17 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.25" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="VGj-6q-vUW" secondAttribute="trailing" constant="16" id="13R-bx-9Yy"/>
                         <constraint firstItem="VGj-6q-vUW" firstAttribute="centerY" secondItem="5SN-V1-fwE" secondAttribute="centerY" id="2rN-IO-oGX"/>
                         <constraint firstItem="5SN-V1-fwE" firstAttribute="leading" secondItem="b6K-rc-dQj" secondAttribute="leading" constant="16" id="8Se-jt-Cw0"/>
-                        <constraint firstItem="VGj-6q-vUW" firstAttribute="top" secondItem="b6K-rc-dQj" secondAttribute="top" constant="8" id="M6o-ad-xuu"/>
+                        <constraint firstAttribute="height" constant="83.5" id="8Vg-y5-1Y8"/>
                         <constraint firstItem="X68-SY-EPa" firstAttribute="centerX" secondItem="5SN-V1-fwE" secondAttribute="centerX" id="VZG-83-3hA"/>
                         <constraint firstItem="X68-SY-EPa" firstAttribute="centerY" secondItem="5SN-V1-fwE" secondAttribute="centerY" id="h8P-x9-ncw"/>
                         <constraint firstItem="qDH-3i-nid" firstAttribute="centerY" secondItem="VGj-6q-vUW" secondAttribute="centerY" id="lh0-du-GQb"/>
                         <constraint firstItem="qDH-3i-nid" firstAttribute="width" secondItem="qDH-3i-nid" secondAttribute="height" multiplier="1:1" id="saf-FK-fDl"/>
                         <constraint firstItem="qDH-3i-nid" firstAttribute="centerX" secondItem="VGj-6q-vUW" secondAttribute="centerX" id="tpZ-Fr-f8Y"/>
-                    </constraints>
-                </view>
-                <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HmG-4V-bjI" userLabel="Overlay View">
-                    <rect key="frame" x="0.0" y="83.5" width="375" height="500"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="HmG-4V-bjI" secondAttribute="height" multiplier="3:4" id="fFt-Nm-9A0"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gfT-iE-HLz" userLabel="footer View">
@@ -147,10 +147,11 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.25" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="WXd-Qu-iT8" firstAttribute="centerX" secondItem="rwZ-mL-hzg" secondAttribute="centerX" id="MZO-MX-uYB"/>
                         <constraint firstItem="4uA-x0-O8R" firstAttribute="centerY" secondItem="F4i-hf-5RY" secondAttribute="centerY" id="RYi-N3-REa"/>
+                        <constraint firstAttribute="height" constant="83.5" id="Usp-PG-q9X"/>
                         <constraint firstItem="rwZ-mL-hzg" firstAttribute="centerY" secondItem="F4i-hf-5RY" secondAttribute="centerY" id="fOV-cw-5qp"/>
                         <constraint firstItem="F4i-hf-5RY" firstAttribute="centerX" secondItem="gfT-iE-HLz" secondAttribute="centerX" id="i0x-gt-z9v"/>
                         <constraint firstItem="WXd-Qu-iT8" firstAttribute="centerY" secondItem="rwZ-mL-hzg" secondAttribute="centerY" id="igU-uX-Kuv"/>
@@ -162,17 +163,18 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="b6K-rc-dQj" firstAttribute="top" secondItem="kDi-lI-cCS" secondAttribute="top" id="1LE-y5-iKt"/>
                 <constraint firstItem="gfT-iE-HLz" firstAttribute="leading" secondItem="QaH-UR-ygy" secondAttribute="leading" id="Cga-tJ-TjX"/>
                 <constraint firstItem="QaH-UR-ygy" firstAttribute="bottom" secondItem="gfT-iE-HLz" secondAttribute="bottom" id="EbD-Os-ekI"/>
-                <constraint firstItem="gfT-iE-HLz" firstAttribute="top" secondItem="HmG-4V-bjI" secondAttribute="bottom" id="MTN-2w-xWv"/>
+                <constraint firstItem="QaH-UR-ygy" firstAttribute="top" secondItem="VGj-6q-vUW" secondAttribute="top" constant="-8" id="JtR-mi-t1s"/>
                 <constraint firstItem="HmG-4V-bjI" firstAttribute="centerY" secondItem="kDi-lI-cCS" secondAttribute="centerY" id="O6f-gI-cBe"/>
                 <constraint firstItem="F4i-hf-5RY" firstAttribute="bottom" secondItem="QaH-UR-ygy" secondAttribute="bottom" constant="-16" id="PZw-XP-kOE"/>
                 <constraint firstItem="gfT-iE-HLz" firstAttribute="trailing" secondItem="QaH-UR-ygy" secondAttribute="trailing" id="Stg-1M-ll5"/>
                 <constraint firstItem="HmG-4V-bjI" firstAttribute="centerX" secondItem="kDi-lI-cCS" secondAttribute="centerX" id="dhj-uD-fjB"/>
-                <constraint firstItem="HmG-4V-bjI" firstAttribute="top" secondItem="b6K-rc-dQj" secondAttribute="bottom" id="eog-gc-Hrw"/>
-                <constraint firstItem="b6K-rc-dQj" firstAttribute="top" secondItem="QaH-UR-ygy" secondAttribute="top" id="kF8-Zb-FGp"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="HmG-4V-bjI" secondAttribute="bottom" id="qD8-uJ-Mev"/>
                 <constraint firstItem="QaH-UR-ygy" firstAttribute="trailing" secondItem="b6K-rc-dQj" secondAttribute="trailing" id="qW5-1I-HTo"/>
                 <constraint firstItem="b6K-rc-dQj" firstAttribute="leading" secondItem="QaH-UR-ygy" secondAttribute="leading" id="qZh-H6-wVe"/>
+                <constraint firstItem="HmG-4V-bjI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="kDi-lI-cCS" secondAttribute="top" id="rjY-Vf-OeC"/>
                 <constraint firstItem="HmG-4V-bjI" firstAttribute="width" secondItem="kDi-lI-cCS" secondAttribute="width" id="sqi-nK-Km7"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="QaH-UR-ygy"/>
@@ -185,7 +187,7 @@
                 <outlet property="settingsButton" destination="VGj-6q-vUW" id="4XE-7t-KOv"/>
                 <outlet property="switchCamButton" destination="4uA-x0-O8R" id="RqN-Kq-PV7"/>
             </connections>
-            <point key="canvasLocation" x="163.768115942029" y="101.78571428571428"/>
+            <point key="canvasLocation" x="162.40000000000001" y="101.19940029985008"/>
         </view>
     </objects>
     <resources>
