--- a/Symmetry/Main.storyboard
+++ b/Symmetry/Main.storyboard
@@ -119,7 +119,7 @@
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TsH-u9-PmC" customClass="RoundedCornerView" customModule="Symmetry" customModuleProvider="target">
                                                     <rect key="frame" x="335.33333333333331" y="5.3333333333333321" width="32.666666666666686" height="33"/>
-                                                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                             <real key="value" value="10"/>
